Finished Site for testing

--- a/index.html
+++ b/index.html
@@ -8,7 +8,20 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-   <h1>if this text is red, linking accomplished!</h1> 
-   <script src="scripts.js"></script>
+    <h1>Assigment - Build a Website with HTML, CSS, and Javascript</h1> 
+    <h1>Thanks to Mr Ashley Ball for hints!</h1>
+    <a href="https://mrashleyball.github.io/Roppers-Computing-Fundamentals-Build-a-Website-with-HTML-CSS-and-Javascript/">Visit Mr Ashley Ball's Website here!</a>
+    
+    <script src="scripts.js"></script>
+
+    <img src="image.png" alt="Compass" />
+
+
+    <p>Click to display the time.</p>
+
+    <button onclick="getElementById('demo').innerHTML=Date()">Click Me</button>
+
+    <p id="demo"></p>
+
 </body>
 </html>
